@@ -121,7 +121,7 @@ public class ClanTable
 	 */
 	public L2Clan getClan(int clanId)
 	{
-		L2Clan clan = _clans.get(new Integer(clanId));
+		L2Clan clan = _clans.get(Integer.valueOf(clanId));
 		return clan;
 	}
 
@@ -201,7 +201,7 @@ public class ClanTable
 		if (_log.isDebugEnabled())
 			_log.info("New clan created: " + clan.getClanId() + " " + clan.getName());
 
-		_clans.put(new Integer(clan.getClanId()), clan);
+		_clans.put(Integer.valueOf(clan.getClanId()), clan);
 
 		//should be update packet only
 		player.sendPacket(new PledgeShowInfoUpdate(clan));
