@@ -304,7 +304,7 @@ public class DimensionalRiftManager
 			NpcHtmlMessage html = new NpcHtmlMessage(npc.getObjectId());
 			html.setFile("data/html/seven_signs/rift/SmallParty.htm");
 			html.replace("%npc_name%", npc.getName());
-			html.replace("%count%", new Integer(Config.RIFT_MIN_PARTY_SIZE).toString());
+			html.replace("%count%", Integer.valueOf(Config.RIFT_MIN_PARTY_SIZE).toString());
 			player.sendPacket(html);
 			return;
 		}
