@@ -248,7 +248,7 @@ public final class L2World
      */
     public L2PetInstance getPet(int ownerId)
     {
-        return _petsInstance.get(new Integer(ownerId));
+        return _petsInstance.get(Integer.valueOf(ownerId));
     }
 
     /**
@@ -259,7 +259,7 @@ public final class L2World
      */
     public L2PetInstance addPet(int ownerId, L2PetInstance pet)
     {
-        return _petsInstance.put(new Integer(ownerId), pet);
+        return _petsInstance.put(Integer.valueOf(ownerId), pet);
     }
 
     /**
@@ -269,7 +269,7 @@ public final class L2World
      */
     public void removePet(int ownerId)
     {
-        _petsInstance.remove(new Integer(ownerId));
+        _petsInstance.remove(Integer.valueOf(ownerId));
     }
     /**
      * Remove the given pet instance.<BR><BR>
