@@ -55,15 +55,15 @@ public class ConfirmDlg extends L2GameServerPacket
 
 	public ConfirmDlg addString(String text)
 	{
-		_types.add(new Integer(TYPE_TEXT));
+		_types.add(Integer.valueOf(TYPE_TEXT));
 		_values.add(text);
 		return this;
 	}
 
 	public ConfirmDlg addNumber(int number)
 	{
-		_types.add(new Integer(TYPE_NUMBER));
-		_values.add(new Integer(number));
+		_types.add(Integer.valueOf(TYPE_NUMBER));
+		_values.add(Integer.valueOf(number));
 		return this;
 	}
 
@@ -102,8 +102,8 @@ public class ConfirmDlg extends L2GameServerPacket
 
 	public ConfirmDlg addNpcName(int id)
 	{
-		_types.add(new Integer(TYPE_NPC_NAME));
-		_values.add(new Integer(1000000 + id));
+		_types.add(Integer.valueOf(TYPE_NPC_NAME));
+		_values.add(Integer.valueOf(1000000 + id));
 		return this;
 	}
 
@@ -116,13 +116,13 @@ public class ConfirmDlg extends L2GameServerPacket
 	{
 		if(item.getItemDisplayId() == item.getItemId())
 		{
-			_types.add(new Integer(TYPE_ITEM_NAME));
-			_values.add(new Integer(item.getItemId()));
+			_types.add(Integer.valueOf(TYPE_ITEM_NAME));
+			_values.add(Integer.valueOf(item.getItemId()));
 		}
 		else
 		{
 			// Custom item - send custom name
-			_types.add(new Integer(TYPE_TEXT));
+			_types.add(Integer.valueOf(TYPE_TEXT));
 			_values.add(item.getName());
 		}
 		return this;
@@ -130,14 +130,14 @@ public class ConfirmDlg extends L2GameServerPacket
 
 	public ConfirmDlg addItemName(int id)
 	{
-		_types.add(new Integer(TYPE_ITEM_NAME));
-		_values.add(new Integer(id));
+		_types.add(Integer.valueOf(TYPE_ITEM_NAME));
+		_values.add(Integer.valueOf(id));
 		return this;
 	}
 
 	public ConfirmDlg addZoneName(int x, int y, int z)
 	{
-		_types.add(new Integer(TYPE_ZONE_NAME));
+		_types.add(Integer.valueOf(TYPE_ZONE_NAME));
 		int[] coord = {x, y, z};
 		_values.add(coord);
 		return this;
@@ -162,8 +162,8 @@ public class ConfirmDlg extends L2GameServerPacket
 
 	public ConfirmDlg addSkillName(int id, int lvl)
 	{
-		_types.add(new Integer(TYPE_SKILL_NAME));
-		_values.add(new Integer(id));
+		_types.add(Integer.valueOf(TYPE_SKILL_NAME));
+		_values.add(Integer.valueOf(id));
 		_skillLvL = lvl;
 		return this;
 	}
